finish the lab Features

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,18 +1,3 @@
-main::after{
-    content: "";
-    display: table;
-    clear: both;
-}
-
-section {
-    width:19%;
-    margin: 20px;
-    float: left;
-    text-align: center;
-   height: 400px;
-   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-   border-radius: 2px;
-}
 
 img{
     display: inline-block;
@@ -20,3 +5,17 @@ img{
         height: 200px;
         box-shadow: 0 2px 2px 0 #00B0FF, 0 2px 2px 0 #00B0FF ;
     }
+
+#sortButtons ,#buttons{
+    width: 50%;
+    text-align: center;
+}
+
+
+#div-buttons{
+    position: sticky;
+    top: 0;
+    display: flex;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 2px;
+}
