--- a/css/modules.css
+++ b/css/modules.css
@@ -3,10 +3,74 @@ section:hover{
     box-shadow: 0 4px 8px 0 #F50057    , 0 2px 10px 0 #F50057    ;
 }
 
-main > :first-child {
-    display: none;
-}
+
 select{
+
     padding: 10px;
-  margin-left: 40%;
+    margin-left: 42%;
+    margin-bottom: 10px;
+}
+
+
+section {
+    width:19%;
+    margin: 20px;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    /* float: left; */
+    text-align: center;
+   height: 400px;
+   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+   border-radius: 2px;
+}
+
+
+
+button {
+    font: inherit;
+    font-size: 16px;
+    width: 200px;
+    border: none;
+    color: white;
+    text-align: center;
+    opacity: 0.6;
+    transition: 0.3s;
+    text-transform: uppercase;
+    padding: 20px ;
+    margin: 15px ;
+    background-color: #f4511e;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+  }
+
+  button:before {
+    left: 48%;
+}
+button:active {
+  background: #9053a9;
+color: #823aa0;
+  top: 2px;
+  opacity: 1;
+}
+button > span {
+  display: inline-block;
+  transition: all 0.5s;
+}
+.icon-forward:before {
+content: "→";
+position: absolute;
+}
+
+.btn-1:before {
+	left: -100%;
+  transition: all 0.5s;
+}
+.btn-1:hover:before {
+    left: 48%;
+    opacity: 1;
+}
+.btn-1:hover > span {
+    
+	transform: translateX(300%);
 }
